#636 1. rename the api 2. change param dtle_log_level to be required 3. make code style the same as other apis
